@@ -28,6 +28,7 @@ VERSION 2.3.2-Beta 1
       Patch by Richard Longland <rlongland@hotmail.com>.
 
   BUGFIXES:
+    * Fixed dropping files to playlist from Konqueror. (BR 235722)
     * Fixed keyboard shortcuts of actions from scripts lost after restart.
       Thanks to Martin Blumenstingl <darklight.xdarklight@googlemail.com>.
       (BR 223165)
